# graphgraph

./: .gitignore  CLAUDE.md  LICENSE  README.md  intiial.md  mathpush.md  peacewise.md  pyproject.toml  setup.ps1  setup.sh  setup_graphgraph.py  welcome.md
.agents/: AGENTS.md  mcp_config.json
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
benchmarks/context_graph/: README.md  adaptive_hop_policy_benchmark.py  adaptive_policy_report.py  adaptive_threshold_sweep.py  adversarial_ambiguity_benchmark.py  architecture_blueprint.md  benchmark_manifest.json  bitpack_benchmark.py  codex_integration_check.py  connected_selection_benchmark.py  constraint_context_benchmark.py  constraint_context_design.md  control_receipt_benchmark.py  cross_project_live_shape.py  cross_repo_anchor_stress.py  density_benchmark.py  doc_code_pairing_benchmark.py  dynamic_budget_benchmark.py  external_landscape.md  final_packet_benchmark.py  format_benchmark.py  frontier_policy_benchmark.py  fused_query_benchmark.py  hop_frontier_benchmark.py  integration_inventory.py  interpretability_benchmark.py  live_graph_shape.py  live_query_noise.py  llm_answer_benchmark.py  local_corpus.py  local_ppr_benchmark.py  local_project_eval.py  local_project_smoke.py  locus_benchmark.py  mathematical_limit_search.py  minmax_analysis.py  model_answer_test_plan.md  model_reasoning_benchmark.py  packet_cache_benchmark.py  packet_format_spec.md  (+21 more)
docs/: NEWFINDINGS.md  NEWFINDINGS2.md  README.md  TOFIX.md  acceptance-harness.md  adaptive-planning-math.md  advanced-context-engineering.md  agent_memory_vs_code_graph.md  architecture.md  arxiv_paper_graphgraph_2.0.md  context_graph_maximization_report.md  dynamic_surface_math.md  empirical-findings.md  engineering.md  frontend-ir-strategy.md  graph-tool-usage-audit.md  graphgraph-vs-graphify.md  graphgraph_vs_graphify_critique.md  hardware_compilation_analogy.md  hgihlevelideas.md  high-level-ideas.md  incremental-update-instruction-set.md  integration-surfaces.md  interpretation-layer.md  lean4_sympy_comparison.md  llm-connection-strategy.md  llm-native-context-graph.md  llm-native-platform.md  llm_internals_position_paper.md  locus-comparison.md  locus_comprehensive_report.md  mathematical_formulations.md  metric-component-logic-gaps.md  neo4j_vs_graphgraph.md  newhelfulconcepts.md  obsidian-graph-model-lessons.md  optimization-roadmap.md  planned-work.md  prior-art-research.md  relation-ontology.md  (+12 more)
docs/bugs/: REALFINDINGS.md  (+6 more)
eval/: flask.json  graphgraph-self.json
scratch/: check_policies.py  debug_frontier.py  debug_locus_readme.py  debug_locus_visitor.py
scripts/: configure_codex_plugin.py
tests/: conftest.py  test_acceptance.py  test_acceptance_exec.py  test_acceptance_quality.py  test_adversarial_ambiguity.py  test_benchmark.py  test_cli_mcp.py  test_concepts.py  test_control.py  test_cycle5_regressions.py  test_eval_harness.py  test_graph_core.py  test_graphgraph_core.py  test_io.py  test_live_validation.py  test_locus_findings.py  test_packets.py  test_planning.py  test_platform.py  test_retrieval.py  test_retrieval_field_log.py  test_retrieval_predicates.py  test_retrieval_section_relevance.py  test_scanner.py  test_scanner_docs.py  test_scanner_frontends.py  test_scanner_history.py  test_scanner_imports.py  test_scanner_incremental.py  test_tree_knapsack.py
visualization/: README.md  build.py  contrast.py
(+190 files in other folders)
