[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphgraph"
version = "0.1.0"
description = "Empirical LLM context graph packet optimizer."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
graphgraph = "graphgraph.cli:main"
graphgraph-mcp = "graphgraph.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
